[tool.poetry]
name = "test-reflex"
version = "0.1.0"
description = ""
authors = ["Jinserk Baik <823222+jinserk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.2.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.0.0"
black = { version = "^23.1.0" }
coverage = { version = "^7.2.1", extras = ['toml'] }
#gevent = "^22.10.2"
httpx = "^0.24.1"
ipython = "^8.15.0"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pytest-fastapi-deps = "^0.2.3"

#[tool.poetry.scripts]
#trf = "trf.cli:app"

[tool.poetry_bumpversion.file."src/trf/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
